<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/root_layout"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/htab_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:titleEnabled="false">


            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/stadium"
                        app:layout_collapseMode="parallax"
                        android:layout_marginBottom="0dp"
                        android:layout_alignBottom="@+id/shadow"/>
                <ImageView
                        android:id="@+id/shadow"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:src="#80000000"
                        app:layout_collapseMode="parallax"/>

                <LinearLayout
                        android:id="@+id/layoutBadge"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:orientation="vertical"
                            android:layout_height="match_parent">
                        <ImageView
                                android:id="@+id/matchHomeBadge"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginTop="50dp"
                                android:fitsSystemWindows="true"
                                android:scaleType="centerCrop"
                                android:paddingStart="30dp"
                                android:paddingEnd="30dp"
                                android:src="@drawable/team_placeholder"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:id="@+id/homeMatchFormation"
                                android:text=""
                                android:paddingTop="1dp"
                                android:textSize="18dp"
                                android:textColor="@android:color/white"/>
                    </LinearLayout>
                    <TextView
                            android:id="@+id/homeMatchScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:layout_marginTop="60dp"
                            android:layout_marginLeft="20dp"
                            android:textSize="30dp"
                            android:textColor="@android:color/white"/>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">
                        <View
                                android:layout_width="100dp"
                                android:layout_height="0dp"/>
                        <TextView
                                android:layout_width="match_parent"
                                android:id="@+id/matchDateTime"
                                android:text=""
                                android:textAlignment="center"
                                android:paddingTop="5dp"
                                android:layout_marginTop="100dp"
                                android:textColor="@color/white"
                                android:layout_height="match_parent"/>

                    </LinearLayout>
                    <TextView
                            android:id="@+id/awayMatchScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:layout_marginTop="60dp"
                            android:layout_marginRight="20dp"
                            android:textSize="30dp"
                            android:textColor="@android:color/white"/>
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:orientation="vertical"
                            android:layout_height="match_parent">
                        <ImageView
                                android:id="@+id/matchAwayBadge"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginTop="50dp"
                                android:fitsSystemWindows="true"
                                android:scaleType="centerCrop"
                                android:paddingStart="30dp"
                                android:paddingEnd="30dp"
                                android:src="@drawable/team_placeholder"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text=""
                                android:id="@+id/awayMatchFormation"
                                android:layout_marginRight="20dp"
                                android:paddingTop="0dp"
                                android:textSize="18dp"
                                android:textColor="@android:color/white"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="160dp"
                            android:text=""
                            android:id="@+id/matchLeague"
                            android:textAlignment="center"
                            android:paddingTop="5dp"

                            android:textColor="@color/white"
                            android:layout_height="match_parent"/>
                </LinearLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="top"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:background="#000"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">
                    <TextView
                            android:layout_width="150dp"
                            android:text="@string/match_stats_label"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:layout_marginTop="30dp"
                            android:textSize="18dp"
                            android:layout_height="wrap_content"/>

                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/homeMatchShots"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:layout_marginLeft="20dp"
                        android:paddingTop="1dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:layout_width="250dp"
                        android:text="@string/shot_on_goal_label"
                        android:textAlignment="center"
                        android:paddingTop="5dp"
                        android:textColor="@color/white"
                        android:layout_height="match_parent"/>
                <TextView
                        android:id="@+id/awayMatchShots"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:layout_marginRight="20dp"
                        android:paddingTop="0dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:background="#212121"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/homeMatchScores"
                        android:layout_height="match_parent"
                        android:text=""
                        android:paddingTop="4dp"
                        android:layout_marginLeft="22dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:layout_width="250dp"
                        android:text="@string/score_label"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:paddingTop="5dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/awayMatchScores"
                        android:text=""
                        android:paddingTop="5dp"
                        android:layout_marginRight="20dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:background="#000"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/homeMatchYellow"
                        android:layout_height="match_parent"
                        android:text="-"
                        android:paddingTop="4dp"
                        android:layout_marginLeft="22dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:layout_width="250dp"
                        android:text="@string/yellowcard_label"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:paddingTop="5dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/awayMatchYellow"
                        android:layout_height="match_parent"
                        android:text="-"
                        android:paddingTop="5dp"
                        android:layout_marginRight="20dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:background="#212121"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/homeMatchRed"
                        android:layout_height="match_parent"
                        android:text="-"
                        android:paddingTop="4dp"
                        android:layout_marginLeft="16dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>
                <TextView
                        android:layout_width="250dp"
                        android:text="@string/redcard_label"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:paddingTop="5dp"
                        android:layout_height="match_parent"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/awayMatchRed"
                        android:layout_height="match_parent"
                        android:text="-"
                        android:paddingTop="5dp"
                        android:layout_marginRight="16dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/white"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
            android:id="@+id/loading"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="70dp"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_height="70dp"/>
</android.support.design.widget.CoordinatorLayout>
